<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/activityPadding"
  tools:context=".Activity.Employee.EmployeeMenu">


  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/employeeMenuOptions"
    android:textSize="@dimen/employeeMenuOptionsTextSize"
    android:id="@+id/employeeMenuTitle" />

  <Button
    android:id="@+id/menuAuthenticateEmployeeBtn"
    app:icon="@drawable/ic_verified_user_black_24dp"
    android:layout_width="@dimen/employeeMenuButtonWidth"
    android:layout_height="wrap_content"
    android:text="@string/authenticateBtn"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="40dp"
    android:layout_below="@id/employeeMenuTitle" />

  <Button
    android:id="@+id/menuMakeNewUserBtn"
    android:layout_width="@dimen/employeeMenuButtonWidth"
    android:layout_height="wrap_content"
    android:text="@string/employeeMenuNewUserBtn"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    app:icon="@drawable/ic_person_add_black_24dp"
    android:layout_below="@id/menuAuthenticateEmployeeBtn" />

  <Button
    android:id="@+id/menuMakeNewAccountBtn"
    android:layout_width="@dimen/employeeMenuButtonWidth"
    android:layout_height="wrap_content"
    android:text="@string/employeeMenuNewAccountBtn"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    app:icon="@drawable/ic_account_box_black_24dp"
    android:layout_below="@id/menuMakeNewUserBtn" />

  <Button
    android:id="@+id/menuMakeNewEmployeeBtn"
    android:layout_width="@dimen/employeeMenuButtonWidth"
    android:layout_height="wrap_content"
    android:text="@string/employeeMenuNewEmployeeBtn"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    app:icon="@drawable/ic_person_add_black_24dp"
    android:layout_below="@id/menuMakeNewAccountBtn" />

  <Button
    android:id="@+id/menuRestockInventoryBtn"
    android:layout_width="@dimen/employeeMenuButtonWidth"
    android:layout_height="wrap_content"
    android:text="@string/restockInventoryBtn"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    app:icon="@drawable/ic_add_circle_black_24dp"
    android:layout_below="@id/menuMakeNewEmployeeBtn" />

  <Button
    android:id="@+id/menuExitBtn"
    android:layout_width="@dimen/employeeMenuButtonWidth"
    android:layout_height="wrap_content"
    android:text="@string/exitBtn"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    app:icon="@drawable/ic_exit_to_app_black_24dp"
    android:layout_below="@id/menuRestockInventoryBtn" />
</RelativeLayout>