<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".Activity.Employee.EmployeeMakeEmployee"
  android:padding="@dimen/activityPadding">

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/createUserNameHint"
    android:inputType="textPersonName"
    android:layout_marginTop="40dp"
    android:id="@+id/makeEmployeeNameEntry" />

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/createUserAgeHint"
    android:inputType="number"
    android:layout_marginTop="20dp"
    android:id="@+id/makeEmployeeAgeEntry"
    android:layout_below="@id/makeEmployeeNameEntry" />

  <EditText
    android:inputType="textPostalAddress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/createUserAddressHint"
    android:layout_marginTop="20dp"
    android:id="@+id/makeEmployeeAddressEntry"
    android:layout_below="@id/makeEmployeeAgeEntry" />

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/loginMenuPasswordHint"
    android:layout_marginTop="20dp"
    android:inputType="textPassword"
    android:id="@+id/makeEmployeePassword"
    android:layout_below="@id/makeEmployeeAddressEntry" />

  <Button
    android:id="@+id/makeEmployeeBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/createEmployeeBtn"
    android:layout_below="@id/makeEmployeePassword"
    android:layout_marginTop="40dp"
    android:layout_centerHorizontal="true"
    app:icon="@drawable/ic_person_add_black_24dp" />

</RelativeLayout>