<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/initializationCreateAdminLayout"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".Activity.Initialization.InitializationCreateFirstAdmin"
  android:padding="@dimen/activityPadding">

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/createUserNameHint"
    android:layout_marginTop="40dp"
    android:id="@+id/initializationAdminNameEntry"
    android:inputType="textPersonName" />

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/createUserAgeHint"
    android:maxLength="3"
    android:layout_marginTop="20dp"
    android:id="@+id/initializationAdminAgeEntry"
    android:layout_below="@id/initializationAdminNameEntry"
    android:inputType="number" />

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/createUserAddressHint"
    android:layout_marginTop="20dp"
    android:maxLength="100"
    android:id="@+id/initializationAdminAddressEntry"
    android:layout_below="@id/initializationAdminAgeEntry"
    android:inputType="textPostalAddress" />

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/loginMenuPasswordHint"
    android:layout_marginTop="20dp"
    android:inputType="textPassword"
    android:id="@+id/initializationAdminPassword"
    android:layout_below="@id/initializationAdminAddressEntry" />

  <Button
    android:id="@+id/initializationCreateAdminButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/createAdminBtn"
    android:layout_below="@id/initializationAdminPassword"
    android:layout_marginTop="40dp"
    android:layout_centerHorizontal="true"
    app:icon="@drawable/ic_person_add_black_24dp" />
</RelativeLayout>