<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".Activity.Login.LoginMenu"
  android:padding="@dimen/activityPadding">

  <Spinner
    android:id="@+id/rolePositionEntry"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:prompt="@string/loginRoleNamePrompt"
    android:entries="@array/roleArrays"
    android:spinnerMode="dialog" />

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/loginMenuIdHint"
    android:inputType="number"
    android:layout_below="@id/rolePositionEntry"
    android:layout_marginTop="25dp"
    android:id="@+id/loginUserIdEntry" />

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/loginMenuPasswordHint"
    android:inputType="textPassword"
    android:id="@+id/loginPassword"
    android:layout_below="@id/loginUserIdEntry"
    android:layout_marginTop="25dp" />

  <Button
    android:id="@+id/loginButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/loginMenuLoginPrompt"
    android:layout_below="@id/loginPassword"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="40dp" />

</RelativeLayout>