<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".Activity.Employee.EmployeeRestockInventory"
  android:padding="@dimen/activityPadding">

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:inputType="number"
    android:hint="@string/itemIdHint"
    android:id="@+id/restockInventoryItemIdEntry" />

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:inputType="number"
    android:hint="@string/quantityHint"
    android:layout_below="@id/restockInventoryItemIdEntry"
    android:id="@+id/restockInventoryQuantityEntry" />

  <Button
    android:id="@+id/restockInventoryBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/restockInventoryBtn"
    android:layout_below="@id/restockInventoryQuantityEntry"
    android:layout_marginTop="40dp"
    android:layout_centerHorizontal="true"
    app:icon="@drawable/ic_add_circle_black_24dp" />
</RelativeLayout>