<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/activityPadding"
  tools:context=".Activity.Admin.AdminViewHistoricAccounts">

  <TextView
    android:id="@+id/historicAccountsPrompt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_marginTop="15dp"
    android:text="@string/viewHistoricAccountsPrompt"
    android:textSize="@dimen/textViewTextSize" />

  <EditText
    android:id="@+id/historicAccountsCustomerIdEntry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_marginLeft="15dp"
    android:layout_toRightOf="@id/historicAccountsPrompt"
    android:hint="@string/userIdHint"
    android:inputType="number"
    android:textSize="20dp" />

  <Button
    android:id="@+id/viewHistoricAccountsBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@id/historicAccountsCustomerIdEntry"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="-54dp"
    android:text="@string/viewHistoricAccountsBtn"
    app:icon="@drawable/ic_account_balance_black_24dp" />


  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="440dp"
    android:layout_below="@id/viewHistoricAccountsBtn"
    android:layout_marginTop="80dp">

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <TextView
        android:id="@+id/viewHistoricAccountsText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/viewHistoricAccountsBtn"
        android:scrollbars="vertical"
        android:textSize="@dimen/textViewTextSize" />
    </ScrollView>

  </RelativeLayout>
</RelativeLayout>